# life-expectancy

./: .flake8  MANIFEST.in  README.md  Untitled.ipynb  pyproject.toml  railway.json  requirements.txt  tox.ini
configs/: params.yaml
research/: Untitled-1.ipynb  Untitled.ipynb  exploratory_data_analysis.ipynb  feature-engineering.ipynb  feature_engineering.ipynb  preprocessors.py  test.ipynb  training.ipynb
src/le_package/: config.py  features.py  predict.py  train.py
src/le_package/api/: app.py  schemas.py
tests/: test_features.py  test_train.py
