[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "le_package"
dynamic = ["version"]
description = "Life Expectancy prediction pipeline using Scikit-learn and Feature-Engine"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Dana Sharon", email = "whosedreamisthis@gmail.com" }
]
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "feature-engine>=1.1.0",
    "country-converter>=1.0.0",
    "joblib>=1.1.0",
    "matplotlib>=3.4.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "tox>=3.24",
    "flake8>=6.0.0",  
    "black>=23.0.0",  
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}